# senior-game

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .renovaterc.json  .yamllint  CODEOWNERS  Cargo.toml  Dockerfile  ECS.md  GETTINGSTARTED.md  README.md  build-linux-client.sh  build-windows-client.sh  default.ignore  rules.xml  rustfmt.toml  test.txt
.cargo/: config.toml
.config/: dotnet-tools.json
Assets/BuildConfig/: BaseBuildConfiguration.buildconfiguration  BaseClientBuild.buildconfiguration  LinuxClientBuild.buildconfiguration  ServerBuild.buildconfiguration  WindowsBuild.buildconfiguration
Assets/Materials/Particles/: Fire.mat
Assets/Materials/Prototype/: 1x1.mat  1x5.mat  2x5.mat  3x1.mat  5x5.mat  7x5.mat
Assets/Models/Prototype/: PrototypeHalfCylinder.fbx
Assets/Prefabs/: Camera.prefab
Assets/Prefabs/Actors/: NetworkPlayer.prefab
Assets/Prefabs/Environment/Castle/: CastleWall.prefab  CastleWallCorner.prefab  Quarter Circle Wall.prefab
Assets/Prefabs/UI/: FormInput.prefab
Assets/Scenes/: MainMenu.unity  Match.unity  NetworkingBase.unity
Assets/Scenes/MainMenu/: UI.unity
Assets/Scenes/Match/: LightingData.asset  Lightmap-0_comp_light.exr  Lightmap-1_comp_light.exr  Lightmap-2_comp_light.exr  Lightmap-3_comp_light.exr  Lightmap-4_comp_light.exr  Post-Process Volume Profile.asset
Assets/Scenes/NetworkingBase/: SharedData.unity
Assets/Scenes/Rendering/: Match.lighting  URPConfig.asset  URPConfig_Renderer.asset
Assets/Scripts/Camera/: Camera.asmdef  CameraAuthoring.cs  CameraFollowComponent.cs  CameraFollowSystem.cs
Assets/Scripts/Client/: CameraSpawnDataAuthoring.cs  Local.asmdef  LocalSystem.cs
Assets/Scripts/Global/: ApplicationStateComponent.cs  ApplicationStateCreationSystem.cs  ApplicationStateCreator.cs  Global.asmdef
Assets/Scripts/Networking/: GameConnectionSystem.cs  GameEntryClientSystem.cs  GameEntryServerSystem.cs  GameNetCodeBootstrap.cs  GameServerBootstrap.cs  MovePlayerSystem.cs  Networking.asmdef  PlayerComponent.cs  PlayerInputCommandData.cs  PlayerInputSystem.cs  PlayerSpawnDataAuthoring.cs  SpawnDataAuthoring.cs  StartGameNetworkingAuthoring.cs
Assets/Scripts/Player/: InitPlayerComponent.cs  InitPlayerSystem.cs  LocalPlayerComponent.cs  LocalPlayerSystem.cs  Player.asmdef  PlayerComponent.cs  PlayerInputCommandData.cs  PlayerInputSystem.cs
Assets/Scripts/SharedComponents/: CameraLeaderComponent.cs  LocalComponent.cs  Shared.asmdef
Assets/Scripts/UI/: FormUIAuthoring.cs  LoginSubmissionSystem.cs  LoginUIAuthoring.cs  LoginUIResponseSystem.cs  UI.asmdef
Assets/Scripts/WWW/: AccountServiceController.cs  WWW.asmdef  WebRequestComponents.cs
Assets/Tests/: TestGlobalState.cs  TestLoginResponse.cs  TestNetworking.cs  TestUI.cs  Tests.asmdef
Assets/Tests/Utils/: ECSTestBase.cs
Assets/UI/Fonts/: LibreBaskerville-Bold SDF.asset  LibreBaskerville-Italic SDF.asset  LibreBaskerville-Regular SDF.asset
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
ci/: ci.yaml  ci.yml
senior_game_client/: Cargo.toml  build.rs
senior_game_client/assets/: input_map.ron
senior_game_client/assets/fonts/: OFL.txt
senior_game_client/assets/models/: bluemanasource.gltf  cube.gltf  greenmanasource.gltf  map.gltf  platform.gltf  redmanasource.gltf  rockbase.gltf  rocksource.gltf
senior_game_client/assets/scenes/: game.scn  physics_test.scn  platform.scn
senior_game_client/src/: http.rs  input.rs  main.rs  movement.rs  net.rs  state.rs
senior_game_client/src/proto/: mod.rs
senior_game_client/src/tests/: http.rs  login.rs  mod.rs
senior_game_client/src/ui/: background.rs  finding_match.rs  login.rs  match_found.rs  mod.rs  queue.rs  register.rs  setup.rs
senior_game_server/: Cargo.toml
senior_game_server/.cargo/: config.toml
senior_game_server/assets/scenes/: game.scn  physics_test.scn  platform.scn
senior_game_server/src/: main.rs
senior_game_shared/: Cargo.toml
senior_game_shared/.cargo/: config.toml
senior_game_shared/src/: bin.rs  lib.rs
senior_game_shared/src/components/: assets.rs  game.rs  input.rs  mod.rs
senior_game_shared/src/net/: mod.rs
senior_game_shared/src/scenes/: destination_helper.rs  game.rs  mod.rs  physics_test.rs  platform.rs
senior_game_shared/src/systems/: dev.rs  game.rs  loadscene.rs  loadsound.rs  mod.rs
tools/: lint-main.sh  lint-tests.sh  stylecheck.sh
(+12 files in other folders)
