
[package]
name = "senior_game_client"
version = "0.1.0"
authors = ["Christopher Miller <cmiller548@gmail.com>", "Alice Hartley <alicehartleyhartley@gmail.com>", "Connor Catlett <ccatlett2000@gmail.com>", "Eddie Torres <edilbertotorres1999@gmail.com>"]
edition = "2018"

[dependencies]
senior_game_shared = { path = "../senior_game_shared" }
bevy = "0.4.0"
bevy_rapier3d = "0.8.0"
bevy_fly_camera = "0.6.0"
bevy_prototype_networking_laminar = { git = "https://github.com/Hugheth/bevy_prototype_networking_laminar", branch = "bevy-0.4" }
bevy_asset_ron = "0.1.0"
bevy-inspector-egui = "0.3.0"
bevy_egui = "0.3.0"
kurinji = "1.0.5"
bevy_mod_picking = "0.3.7"
serde = "1.0.124"
sentry = "0.22.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.64"
url = "2.2.1"

[dev-dependencies]
mockito = "0.29.0"
