[package]
name = "senior_game_server"
version = "0.1.0"
authors = ["Christopher Miller <cmiller548@gmail.com>", "Alice Hartley <alicehartleyhartley@gmail.com>", "Connor Catlett <ccatlett2000@gmail.com>", "Eddie Torres <edilbertotorres1999@gmail.com>"]
edition = "2018"

[dependencies]
senior_game_shared = { path = "../senior_game_shared" }
bevy = "0.5.0"
bevy_rapier3d = "0.11.0"
bevy_prototype_networking_laminar = { git = "https://github.com/Hugheth/bevy_prototype_networking_laminar", branch = "bevy-0.4" }
sentry = "0.23.0"
agones = { git = "https://github.com/realliance/agones-sdk", features = ["openssl"] }
