[package]
name = "senior_game_shared"
version = "0.1.0"
authors = ["Christopher Miller <cmiller548@gmail.com>", "Alice Hartley <alicehartleyhartley@gmail.com>", "Connor Catlett <ccatlett2000@gmail.com>", "Eddie Torres <edilbertotorres1999@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.4.0"
bevy_rapier3d = "0.8.0"
bevy_prototype_networking_laminar = { git = "https://github.com/Hugheth/bevy_prototype_networking_laminar", branch = "bevy-0.4" }
serde = "1.0.124"
bincode = "1.3.2"
kurinji = "1.0.5"
bevy_mod_picking = "0.3.7"
anyhow = "1.0.13"
ron = "0.6.4"
bevy_gltf = "*"

[lib]
name = "senior_game_shared"
path = "src/lib.rs"

[[bin]]
name = "senior_game_shared"
path = "src/bin.rs"
